Got pearson test working on percent poverty

--- a/project2.ipynb
+++ b/project2.ipynb
@@ -37,12 +37,7 @@
     "df_poverty = df_poverty.rename(columns={'Zip_Code_Crime': 'Zip Code'})\n",
     "\n",
     "\n",
-    "# Display the count\n",
-    "# print(\"Count of rows with Zip Code 78733:\", zip_code_78733_count)\n",
-    "# print(df_poverty[df_poverty['Zip Code'] == 78733\t])\n",
-    "print(df_poverty['Zip Code'].value_counts(dropna=False))\n",
     "\n",
-    "df_poverty.head()\n",
     "\n",
     "\n"
    ]
@@ -57,14 +52,13 @@
     "df_zip_codes = pd.read_csv('AustinZipCodes.csv', usecols=['Zip Code', 'Population', 'People / Sq. Mile'])\n",
     "# merged_df = pd.merge(df_poverty, df_zip_codes, left_on='Zip_Code_Crime', right_on='Zip Code', how='left')\n",
     "\n",
-    "# df_zip_codes['Total_Crimes'] = merged_df['Total']\n",
-    "# Merge data frames on the 'Zip_Code_Crime' column\n",
+    "\n",
+    "# Merge data frames on the 'Zip Code' column\n",
     "merged_df = pd.merge(df_poverty, df_zip_codes, on='Zip Code', how='left')\n",
     "\n",
     "# Calculate total number of crime reports for each zip code\n",
     "crime_reports_count = merged_df['Zip Code'].value_counts().reset_index()\n",
     "\n",
-    "# Rename columns for clarity\n",
     "crime_reports_count.columns = ['Zip Code', 'Total_Crimes']\n",
     "\n",
     "# Merge the crime reports count with df_zip_codes\n",
@@ -83,8 +77,24 @@
     "\n",
     "# add percentage of pop below poverty to \n",
     "percent_poverty = df_poverty[['Zip Code', 'Populationbelowpovertylevel']].drop_duplicates().reset_index(drop=True)\n",
+    "percent_change_poverty = df_poverty[['Zip Code', 'Changeinpercentageofpopulationbelowpoverty2000-2012']].drop_duplicates().reset_index(drop=True)\n",
+    "df_zip_codes = pd.merge(df_zip_codes, percent_poverty, on='Zip Code', how='left')\n",
+    "df_zip_codes = pd.merge(df_zip_codes, percent_change_poverty, on='Zip Code', how='left')\n",
     "\n",
-    "df_zip_codes.head(50)"
+    "df_zip_codes.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b099a89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dropped = df_zip_codes.dropna()\n",
+    "dropped['Populationbelowpovertylevel'] = dropped['Populationbelowpovertylevel'].str.replace('%','').astype('float64')\n",
+    "dropped['Changeinpercentageofpopulationbelowpoverty2000-2012'] = dropped['Changeinpercentageofpopulationbelowpoverty2000-2012'].str.replace('%','').astype('float64')\n",
+    "stats.pearsonr(dropped['Total_Crimes'], dropped['Populationbelowpovertylevel'])"
    ]
   },
   {
