Got regplots and correlation fixed. eliminated outlier and made sure to use per capita for crime

--- a/project2.ipynb
+++ b/project2.ipynb
@@ -10,13 +10,12 @@
     "import pandas as pd\n",
     "import seaborn as sb\n",
     "import numpy as np\n",
-    "import matplotlib as plot\n",
+    "import matplotlib.pyplot as plt\n",
     "import math\n",
     "from scipy import stats\n",
     "\n",
     "crime_housing = pd.read_csv('crime-housing-austin-2015.csv')\n",
-    "crime_housing.head()\n",
-    "print(crime_housing.columns)"
+    "# print(crime_housing.columns)"
    ]
   },
   {
@@ -49,8 +48,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Read in zip code file for per capita info\n",
     "df_zip_codes = pd.read_csv('AustinZipCodes.csv', usecols=['Zip Code', 'Population', 'People / Sq. Mile'])\n",
-    "# merged_df = pd.merge(df_poverty, df_zip_codes, left_on='Zip_Code_Crime', right_on='Zip Code', how='left')\n",
     "\n",
     "\n",
     "# Merge data frames on the 'Zip Code' column\n",
@@ -59,29 +58,31 @@
     "# Calculate total number of crime reports for each zip code\n",
     "crime_reports_count = merged_df['Zip Code'].value_counts().reset_index()\n",
     "\n",
+    "# Rename the columns\n",
     "crime_reports_count.columns = ['Zip Code', 'Total_Crimes']\n",
     "\n",
     "# Merge the crime reports count with df_zip_codes\n",
     "df_zip_codes = pd.merge(df_zip_codes, crime_reports_count, on='Zip Code', how='left')\n",
     "\n",
     "# Fill NaN values with 0 for zip codes with no crime reports\n",
-    "df_zip_codes['Total_Crimes'].fillna(0, inplace=True)\n",
+    "# df_zip_codes['Total_Crimes'].fillna(0, inplace=True)\n",
+    "df_zip_codes = df_zip_codes.dropna()\n",
     "\n",
     "df_zip_codes['People / Sq. Mile'] = df_zip_codes['People / Sq. Mile'].str.replace(',','').astype('float64')\n",
     "df_zip_codes['Population']= df_zip_codes['Population'].str.replace(',','').astype('float64')\n",
-    "# df_zip_codes = df_zip_codes.dropna()\n",
-    "# print(df_zip_codes['Population'].dtype)\n",
+    "\n",
     "\n",
     "# add crimes per capita column.\n",
     "df_zip_codes['Crimes_Per_Capita'] = (df_zip_codes['Total_Crimes'] / df_zip_codes['Population'])\n",
     "\n",
-    "# add percentage of pop below poverty to \n",
+    "\n",
     "percent_poverty = df_poverty[['Zip Code', 'Populationbelowpovertylevel']].drop_duplicates().reset_index(drop=True)\n",
     "percent_change_poverty = df_poverty[['Zip Code', 'Changeinpercentageofpopulationbelowpoverty2000-2012']].drop_duplicates().reset_index(drop=True)\n",
     "df_zip_codes = pd.merge(df_zip_codes, percent_poverty, on='Zip Code', how='left')\n",
     "df_zip_codes = pd.merge(df_zip_codes, percent_change_poverty, on='Zip Code', how='left')\n",
     "\n",
-    "df_zip_codes.head()"
+    "\n",
+    "df_zip_codes.head(50)\n"
    ]
   },
   {
@@ -92,9 +93,23 @@
    "outputs": [],
    "source": [
     "dropped = df_zip_codes.dropna()\n",
+    "\"\"\"\n",
+    "Converting percentages to floats. Using the recommended .loc iterator prevents me from using the regplot because\n",
+    "pandas doesn't recognize the resulting columns as having a datatype of float and rather insists the datatype is object\n",
+    "even when I confirm the datatype of each field is a float. \n",
+    "\"\"\"\n",
     "dropped['Populationbelowpovertylevel'] = dropped['Populationbelowpovertylevel'].str.replace('%','').astype('float64')\n",
     "dropped['Changeinpercentageofpopulationbelowpoverty2000-2012'] = dropped['Changeinpercentageofpopulationbelowpoverty2000-2012'].str.replace('%','').astype('float64')\n",
-    "stats.pearsonr(dropped['Total_Crimes'], dropped['Populationbelowpovertylevel'])"
+    "\n",
+    "# dropped zip code 78701 as an outlier.\n",
+    "dropped = dropped.drop(21).reset_index(drop=True)\n",
+    "\n",
+    "# Correlation tests\n",
+    "print('Correlation between Crimes Per Capita and Population below poverty level')\n",
+    "print(stats.pearsonr(dropped['Crimes_Per_Capita'], dropped['Populationbelowpovertylevel']))\n",
+    "print('Correlation between Crimes Per Capita and Change in percentage below poverty level')\n",
+    "print(stats.pearsonr(dropped['Crimes_Per_Capita'], dropped['Changeinpercentageofpopulationbelowpoverty2000-2012']))\n",
+    "dropped.head(50)"
    ]
   },
   {
@@ -104,7 +119,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sb.scatterplot(x=df_zip_codes['People / Sq. Mile'], y=df_zip_codes['Crimes_Per_Capita'])"
+    "# dropped.loc[:,'Changeinpercentageofpopulationbelowpoverty2000-2012'] = pd.to_numeric(dropped['Changeinpercentageofpopulationbelowpoverty2000-2012'], errors='coerce')\n",
+    "# dropped.loc[:,'Populationbelowpovertylevel'] = pd.to_numeric(dropped['Populationbelowpovertylevel'], errors='coerce')\n",
+    "\n",
+    "\n",
+    "sb.regplot(data=dropped, x=dropped['Populationbelowpovertylevel'], y=dropped['Crimes_Per_Capita'])\n",
+    "\n",
+    "# non_numeric_values = dropped['Changeinpercentageofpopulationbelowpoverty2000-2012'][pd.to_numeric(dropped['Changeinpercentageofpopulationbelowpoverty2000-2012'], errors='coerce').isna()]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sb.regplot(data=dropped, x=dropped['Changeinpercentageofpopulationbelowpoverty2000-2012'], y=dropped['Crimes_Per_Capita'])\n",
+    "plt.xlabel('Change_%Pop_Below_Poverty')\n",
+    "plt.title(\"Total Crimes vs Change in poverty\")\n",
+    "plt.ylim(0, None)"
    ]
   }
  ],
