nate's experimenting so far with crime type vs avg pop density

--- a/project2.ipynb
+++ b/project2.ipynb
@@ -139,6 +139,154 @@
     "plt.title(\"Total Crimes vs Change in poverty\")\n",
     "plt.ylim(0, None)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "033a9e11",
+   "metadata": {},
+   "source": [
+    "# Nate's analyses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "206023b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Grab crime data\n",
+    "crimeData = pd.read_csv(\"crime-housing-austin-2015.csv\")\n",
+    "crimeData.rename(columns={'Zip_Code_Crime': 'Zip Code'}, inplace=True)\n",
+    "display(crimeData)\n",
+    "display(crimeData.columns)\n",
+    "display(crimeData['Highest_NIBRS_UCR_Offense_Description'].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a06543d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Grab zip data\n",
+    "zipData = pd.read_csv(\"AustinZipCodes.csv\")\n",
+    "zipData['National Rank'] = zipData['National Rank'].str.replace('#', '').str.replace(',', '').astype('int')\n",
+    "zipData['People / Sq. Mile'] = zipData['People / Sq. Mile'].str.replace(',', '').astype('float')\n",
+    "zipData['Population'] = zipData['Population'].str.replace(',', '').astype('int')\n",
+    "zipData = zipData[['Zip Code', 'Location', 'Population', 'People / Sq. Mile', 'National Rank']]\n",
+    "display(zipData)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91f45217",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zipData.sort_values(by='People / Sq. Mile')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea727467",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Combine the data into a single df\n",
+    "combinedData = pd.merge(crimeData, zipData, on=\"Zip Code\", how='left')\n",
+    "display(combinedData)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4190410",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find average pop density per crime type\n",
+    "# rapes = combinedData.groupby('Highest_NIBRS_UCR_Offense_Description')['People / Sq. Mile'].mean().reset_index()\n",
+    "# display(rapes)\n",
+    "\n",
+    "\n",
+    "# display(combinedData.sort_values(by='People / Sq. Mile'))\n",
+    "combinedData = combinedData.dropna(subset=['People / Sq. Mile'])\n",
+    "byCrime = combinedData.groupby('Highest_NIBRS_UCR_Offense_Description')['People / Sq. Mile'].mean().reset_index()\n",
+    "display(byCrime)\n",
+    "sb.displot(data=combinedData[combinedData['Highest_NIBRS_UCR_Offense_Description'].isin(['Robbery','Burglary'])], x='People / Sq. Mile',  hue='Highest_NIBRS_UCR_Offense_Description', kind='kde', common_norm=False)\n",
+    "display(stats.ttest_ind(combinedData[combinedData['Highest_NIBRS_UCR_Offense_Description'] == 'Theft']['People / Sq. Mile'], combinedData[combinedData['Highest_NIBRS_UCR_Offense_Description'] == 'Burglary']['People / Sq. Mile']))\n",
+    "display(stats.ttest_ind(combinedData[combinedData['Highest_NIBRS_UCR_Offense_Description'] == 'Rape']['People / Sq. Mile'], combinedData[combinedData['Highest_NIBRS_UCR_Offense_Description'] == 'Burglary']['People / Sq. Mile']))\n",
+    "display(stats.ttest_ind(combinedData[combinedData['Highest_NIBRS_UCR_Offense_Description'] == 'Burglary']['People / Sq. Mile'], combinedData[combinedData['Highest_NIBRS_UCR_Offense_Description'] == 'Robbery']['People / Sq. Mile']))\n",
+    "display(stats.ttest_ind(combinedData[combinedData['Highest_NIBRS_UCR_Offense_Description'] == 'Theft']['People / Sq. Mile'], combinedData[combinedData['Highest_NIBRS_UCR_Offense_Description'] == 'Robbery']['People / Sq. Mile']))\n",
+    "display(stats.ttest_ind(combinedData[combinedData['Highest_NIBRS_UCR_Offense_Description'] == 'Auto Theft']['People / Sq. Mile'], combinedData[combinedData['Highest_NIBRS_UCR_Offense_Description'] == 'Theft']['People / Sq. Mile']))\n",
+    "display(stats.ttest_ind(combinedData[combinedData['Highest_NIBRS_UCR_Offense_Description'] == 'Auto Theft']['People / Sq. Mile'], combinedData[combinedData['Highest_NIBRS_UCR_Offense_Description'] == 'Burglary']['People / Sq. Mile']))\n",
+    "display(stats.ttest_ind(combinedData[combinedData['Highest_NIBRS_UCR_Offense_Description'] == 'Auto Theft']['People / Sq. Mile'], combinedData[combinedData['Highest_NIBRS_UCR_Offense_Description'] == 'Robbery']['People / Sq. Mile']))\n",
+    "display(stats.ttest_ind(combinedData[combinedData['Highest_NIBRS_UCR_Offense_Description'] == 'Auto Theft']['People / Sq. Mile'], combinedData[combinedData['Highest_NIBRS_UCR_Offense_Description'] == 'Burglary']['People / Sq. Mile']))\n",
+    "\n",
+    "# combinedData.sort_values(by='People / Sq. Mile')\n",
+    "\n",
+    "# between two zip codes, compare crime types out of total crimes\n",
+    "\n",
+    "# stats.ttest_ind(df[df.State == 'RI'].Score, df[df.State == 'TX'].Score)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e4f318f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "crimesByArtist = combinedData.groupby('Zip Code').agg({'Key': 'count', 'Rentalunitsaffordabletoaverageartist': 'first'}).reset_index()\n",
+    "crimesByArtist = crimesByArtist.dropna(subset='Rentalunitsaffordabletoaverageartist')\n",
+    "crimesByArtist['Rentalunitsaffordabletoaverageartist'] = crimesByArtist['Rentalunitsaffordabletoaverageartist'].str.replace('%', '').astype('int')\n",
+    "display(crimesByArtist)\n",
+    "\n",
+    "# sb.barplot(data=crimesByArtist.head(5), x='Zip Code', hue='')\n",
+    "\n",
+    "# Create a bar chart with two y-axes\n",
+    "fig, ax1 = plt.subplots()\n",
+    "\n",
+    "# Plot the first set of data on the first y-axis\n",
+    "sb.barplot(x='Zip Code', y='Key', data=crimesByArtist.head(5), ax=ax1, color='blue', alpha=0.7)\n",
+    "\n",
+    "# Create a second y-axis on the same plot\n",
+    "ax2 = ax1.twinx()\n",
+    "\n",
+    "# Plot the second set of data on the second y-axis\n",
+    "sb.barplot(x='Zip Code', y='Rentalunitsaffordabletoaverageartist', data=crimesByArtist.head(5), ax=ax2, color='orange', alpha=0.7)\n",
+    "\n",
+    "# Adjust the colors and alpha values as needed\n",
+    "\n",
+    "# Show the plot\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29c88f44",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "crimesPerCapita = combinedData.groupby('Zip Code').agg({'Key': 'count', 'Population': 'first', 'People / Sq. Mile': 'first'}).reset_index()\n",
+    "crimesPerCapita = crimesPerCapita.dropna(subset='Population')\n",
+    "display(crimesPerCapita)\n",
+    "crimesPerCapita['Crimes_Per_Capita'] = crimesPerCapita['Key'] / crimesPerCapita['Population']\n",
+    "# crimesPerCapitaByPopulation = crimesPerCapita.sort_values('Population')\n",
+    "# crimesByArtist = combinedData.groupby('Zip Code').agg({'Key': 'count', 'Rentalunitsaffordabletoaverageartist': 'first'}).reset_index()\n",
+    "display(crimesPerCapita)\n",
+    "\n",
+    "# sb.regplot(data=crimesPerCapita, x=\"Population\", y=\"Crimes_Per_Capita\", scatter_kws={'s': 10})\n",
+    "\n",
+    "sb.regplot(data=crimesPerCapita, x=\"People / Sq. Mile\", y=\"Crimes_Per_Capita\", scatter_kws={'s': 10})\n",
+    "# \n",
+    "stats.pearsonr(crimesPerCapita[\"People / Sq. Mile\"], crimesPerCapita[\"Crimes_Per_Capita\"])"
+   ]
   }
  ],
  "metadata": {
@@ -157,7 +305,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
