Relabeled regression plots.

--- a/project2.ipynb
+++ b/project2.ipynb
@@ -124,6 +124,8 @@
     "\n",
     "\n",
     "sb.regplot(data=dropped, x=dropped['Populationbelowpovertylevel'], y=dropped['Crimes_Per_Capita'])\n",
+    "plt.title(\"Total Crimes vs Poverty Level\")\n",
+    "plt.xlabel(\"%_pop_below_poverty_level\")\n",
     "\n",
     "# non_numeric_values = dropped['Changeinpercentageofpopulationbelowpoverty2000-2012'][pd.to_numeric(dropped['Changeinpercentageofpopulationbelowpoverty2000-2012'], errors='coerce').isna()]\n"
    ]
@@ -580,7 +582,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
