Removed some commented out code from the correlation analyis.

--- a/project2.ipynb
+++ b/project2.ipynb
@@ -11,7 +11,6 @@
     "import seaborn as sb\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import math\n",
     "from scipy import stats\n",
     "\n",
     "crime_housing = pd.read_csv('crime-housing-austin-2015.csv')\n",
@@ -64,8 +63,7 @@
     "# Merge the crime reports count with df_zip_codes\n",
     "df_zip_codes = pd.merge(df_zip_codes, crime_reports_count, on='Zip Code', how='left')\n",
     "\n",
-    "# Fill NaN values with 0 for zip codes with no crime reports\n",
-    "# df_zip_codes['Total_Crimes'].fillna(0, inplace=True)\n",
+    "# Drop na\n",
     "df_zip_codes = df_zip_codes.dropna()\n",
     "\n",
     "df_zip_codes['People / Sq. Mile'] = df_zip_codes['People / Sq. Mile'].str.replace(',','').astype('float64')\n",
@@ -82,7 +80,7 @@
     "df_zip_codes = pd.merge(df_zip_codes, percent_change_poverty, on='Zip Code', how='left')\n",
     "\n",
     "\n",
-    "df_zip_codes.head(50)\n"
+    "df_zip_codes.head(5)\n"
    ]
   },
   {
@@ -119,15 +117,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dropped.loc[:,'Changeinpercentageofpopulationbelowpoverty2000-2012'] = pd.to_numeric(dropped['Changeinpercentageofpopulationbelowpoverty2000-2012'], errors='coerce')\n",
-    "# dropped.loc[:,'Populationbelowpovertylevel'] = pd.to_numeric(dropped['Populationbelowpovertylevel'], errors='coerce')\n",
     "\n",
     "\n",
     "sb.regplot(data=dropped, x=dropped['Populationbelowpovertylevel'], y=dropped['Crimes_Per_Capita'])\n",
     "plt.title(\"Total Crimes vs Poverty Level\")\n",
     "plt.xlabel(\"%_pop_below_poverty_level\")\n",
-    "\n",
-    "# non_numeric_values = dropped['Changeinpercentageofpopulationbelowpoverty2000-2012'][pd.to_numeric(dropped['Changeinpercentageofpopulationbelowpoverty2000-2012'], errors='coerce').isna()]\n"
+    "\n"
    ]
   },
   {
