Fixed labels for like the third time

--- a/project2.ipynb
+++ b/project2.ipynb
@@ -120,7 +120,7 @@
     "\n",
     "\n",
     "sb.regplot(data=dropped, x=dropped['Populationbelowpovertylevel'], y=dropped['Crimes_Per_Capita'])\n",
-    "plt.title(\"Total Crimes vs Poverty Level\")\n",
+    "plt.title(\"Per Capita Crime vs Poverty Level\")\n",
     "plt.xlabel(\"%_pop_below_poverty_level\")\n",
     "\n"
    ]
@@ -133,7 +133,7 @@
    "source": [
     "sb.regplot(data=dropped, x=dropped['Changeinpercentageofpopulationbelowpoverty2000-2012'], y=dropped['Crimes_Per_Capita'])\n",
     "plt.xlabel('Change_%Pop_Below_Poverty')\n",
-    "plt.title(\"Total Crimes vs Change in poverty\")\n",
+    "plt.title(\"Per Capita Crime vs Change in poverty\")\n",
     "plt.ylim(0, None)"
    ]
   },
