finalized notebook and added an extra plot for population density distributions across provided zip codes

--- a/project2.ipynb
+++ b/project2.ipynb
@@ -142,7 +142,7 @@
    "id": "033a9e11",
    "metadata": {},
    "source": [
-    "# Nate's analyses"
+    "## Crime classifications"
    ]
   },
   {
@@ -187,6 +187,22 @@
     "# zipData = zipData.sort_values(by='People / Sq. Mile')\n",
     "# zipData = zipData.drop(zipData.index[-1])\n",
     "# zipData"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f32ff298",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sb.barplot(data=zipData.sort_values(by='People / Sq. Mile'), x='Zip Code', y='People / Sq. Mile')\n",
+    "sb.displot(data=zipData, x='People / Sq. Mile', bins=30)\n",
+    "\n",
+    "plt.title('Distribution of Population Densities of Zip Codes')\n",
+    "\n",
+    "fig = plt.gcf()\n",
+    "fig.set_size_inches(3, 2)"
    ]
   },
   {
@@ -272,7 +288,7 @@
     "byCrime = combinedData.groupby('Highest_NIBRS_UCR_Offense_Description')['People / Sq. Mile'].agg(['mean', 'std']).reset_index()\n",
     "byCrime.columns = ['Highest_NIBRS_UCR_Offense_Description', 'People / Sq. Mile', 'std']\n",
     "byCrime = byCrime.sort_values(ascending=False, by='People / Sq. Mile')\n",
-    "display(byCrime)\n",
+    "display(byCrime.sort_values(by='std'))\n",
     "\n",
     "sb.barplot(data=byCrime, x='Highest_NIBRS_UCR_Offense_Description', y='People / Sq. Mile', errorbar='sd').set_ylim(3800, 4200)\n",
     "\n",
@@ -304,7 +320,10 @@
     "plt.axvline(mean + std, color='green', linestyle='dashed', linewidth=2, label='Mean + 1 SD')\n",
     "plt.axvline(mean - std, color='green', linestyle='dashed', linewidth=2, label='Mean - 1 SD')\n",
     "\n",
-    "plt.title('Population Density Distribution of Zip Codes in Which a Robbery was Reported')"
+    "plt.title('Population Density Distribution of Zip Codes in Which a Robbery was Reported')\n",
+    "\n",
+    "fig = plt.gcf()\n",
+    "fig.set_size_inches(10, 5)"
    ]
   },
   {
@@ -330,7 +349,10 @@
     "plt.axvline(mean + std, color='green', linestyle='dashed', linewidth=2, label='Mean + 1 SD')\n",
     "plt.axvline(mean - std, color='green', linestyle='dashed', linewidth=2, label='Mean - 1 SD')\n",
     "\n",
-    "plt.title('Population Density Distribution of Zip Codes in Which an Auto Theft was Reported')"
+    "plt.title('Population Density Distribution of Zip Codes in Which an Auto Theft was Reported')\n",
+    "\n",
+    "fig = plt.gcf()\n",
+    "fig.set_size_inches(10, 5)"
    ]
   },
   {
@@ -533,7 +555,15 @@
    "source": [
     "sb.displot(data=combinedData[combinedData['Highest_NIBRS_UCR_Offense_Description'].isin(['Robbery','Burglary'])], x='People / Sq. Mile',  hue='Highest_NIBRS_UCR_Offense_Description', kind='kde', common_norm=False)\n",
     "\n",
-    "plt.title('Population Density Distribution of Zip Codes in Which a Crime was Reported')"
+    "plt.title('Population Density Distribution of Zip Codes in Which a Crime was Reported')\n",
+    "\n",
+    "mean = byCrime[byCrime['Highest_NIBRS_UCR_Offense_Description'] == 'Burglary']['People / Sq. Mile'].astype(float).iloc[0]\n",
+    "std = byCrime[byCrime['Highest_NIBRS_UCR_Offense_Description'] == 'Burglary']['std'].astype(float).iloc[0]\n",
+    "plt.axvline(mean, color='orange', linestyle='dashed', linewidth=2, label='Mean')\n",
+    "\n",
+    "mean = byCrime[byCrime['Highest_NIBRS_UCR_Offense_Description'] == 'Robbery']['People / Sq. Mile'].astype(float).iloc[0]\n",
+    "std = byCrime[byCrime['Highest_NIBRS_UCR_Offense_Description'] == 'Robbery']['std'].astype(float).iloc[0]\n",
+    "plt.axvline(mean, color='blue', linestyle='dashed', linewidth=2, label='Mean')"
    ]
   },
   {
@@ -545,7 +575,15 @@
    "source": [
     "sb.displot(data=combinedData[combinedData['Highest_NIBRS_UCR_Offense_Description'].isin(['Auto Theft','Burglary'])], x='People / Sq. Mile',  hue='Highest_NIBRS_UCR_Offense_Description', kind='kde', common_norm=False)\n",
     "\n",
-    "plt.title('Population Density Distribution of Zip Codes in Which a Crime was Reported')"
+    "plt.title('Population Density Distribution of Zip Codes in Which a Crime was Reported')\n",
+    "\n",
+    "mean = byCrime[byCrime['Highest_NIBRS_UCR_Offense_Description'] == 'Burglary']['People / Sq. Mile'].astype(float).iloc[0]\n",
+    "std = byCrime[byCrime['Highest_NIBRS_UCR_Offense_Description'] == 'Burglary']['std'].astype(float).iloc[0]\n",
+    "plt.axvline(mean, color='blue', linestyle='dashed', linewidth=2, label='Mean')\n",
+    "\n",
+    "mean = byCrime[byCrime['Highest_NIBRS_UCR_Offense_Description'] == 'Auto Theft']['People / Sq. Mile'].astype(float).iloc[0]\n",
+    "std = byCrime[byCrime['Highest_NIBRS_UCR_Offense_Description'] == 'Auto Theft']['std'].astype(float).iloc[0]\n",
+    "plt.axvline(mean, color='orange', linestyle='dashed', linewidth=2, label='Mean')"
    ]
   },
   {
@@ -557,7 +595,15 @@
    "source": [
     "sb.displot(data=combinedData[combinedData['Highest_NIBRS_UCR_Offense_Description'].isin(['Robbery','Agg Assault'])], x='People / Sq. Mile',  hue='Highest_NIBRS_UCR_Offense_Description', kind='kde', common_norm=False)\n",
     "\n",
-    "plt.title('Population Density Distribution of Zip Codes in Which a Crime was Reported')"
+    "plt.title('Population Density Distribution of Zip Codes in Which a Crime was Reported')\n",
+    "\n",
+    "mean = byCrime[byCrime['Highest_NIBRS_UCR_Offense_Description'] == 'Agg Assault']['People / Sq. Mile'].astype(float).iloc[0]\n",
+    "std = byCrime[byCrime['Highest_NIBRS_UCR_Offense_Description'] == 'Agg Assault']['std'].astype(float).iloc[0]\n",
+    "plt.axvline(mean, color='orange', linestyle='dashed', linewidth=2, label='Mean')\n",
+    "\n",
+    "mean = byCrime[byCrime['Highest_NIBRS_UCR_Offense_Description'] == 'Robbery']['People / Sq. Mile'].astype(float).iloc[0]\n",
+    "std = byCrime[byCrime['Highest_NIBRS_UCR_Offense_Description'] == 'Robbery']['std'].astype(float).iloc[0]\n",
+    "plt.axvline(mean, color='blue', linestyle='dashed', linewidth=2, label='Mean')"
    ]
   }
  ],
@@ -577,7 +623,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
